2006-02-01	fabian

	* Fixed "can't save changes" bug.
	* Fixed a bug in [VT100Screen setString] that could cause crashes in rare occasions.
	* Incorporated the patch submitted by Tom Emerson. Now the URL selection is trimmed 
	  before it's sent to the browser.
	* Updated zh_CN and zh_TW files.
	
2005-09-21	fabian

	* Added contribution from Damon Parker into Resource page of the website.

2005-05-04	fabian

	* Changes in decoding_string(). Now we do not ignore the whole line after receiving an invalid code.
	
2005-04-16	ujwal

	* All key input is checked for mapping.
	* Preferences are saved to disk on hitting OK.

2005-04-09	ujwal

	* Removed bouncing icon feature. Not a good idea for a terminal.
	* Incorporated Geoff Reedy's patch for xterm mouse reporting with minor changes.
	* Incorporated Rob Warner's patch to toggle transparency.
	* Fixed "Find" and "Copy" in selecting correct text and breaking across lines.
	* Fixed "appending of spaces and of last line coped". Bug #1068198.
	* Added an option to "show" bell that is separate from "play" bell in terminal profile.
	* Fixed visual representation of "help" key in keymapping editor.

2005-04-06	fabian

	* Updated website files
	
2005-4-03	ujwal

	* Cancelling Rendezvous resolution after resolution or error.
	* Re-implemented sorting of encoding list using user supplied patch.
	* Cleaning up zombie process after terminating session.
	* 0.8.1 release

2005-04-03	ujwal

	* Version number is 0.8.1.
	* Fixed "get contents" script support.
	* Put in a warning when enabling "Send Input to all sessions".
	* Encoding list in drop-down menu is sorted.
	* Added support to specify path to nested bookmark in AppleScript.

2005-03-11	fabian

	* Updated zh_TW locale files.
	* Updated website files.
	
2004-12-18	fabian

	* Updated website files for new release.
	* Improved version of iTerm icon (still provided by sinomac.com)
	
2004-12-13	fabian
